--- a/app/views/components/provaesperta/_navbar.html.erb
+++ b/app/views/components/provaesperta/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="border border-black bg-black text-white font-bold flex justify-between items-center">
+<div class="border border-black bg-neutral-800 text-white font-bold flex justify-between items-center">
 <span class="underline font-bold"><</span>
 <h1 class="underline"><%= codice %></h1>
 <span class="underline font-bold">></span>
@@ -6,34 +6,31 @@
 
 <nav class="bg-white border-gray-200">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-2">
-    <img src="/images/Diadora_logo_round.png" class="h-8" />
+    <img src="/images/logo.png" class="h-8 rounded-xl" />
     <div class="flex items-center md:order-2 space-x-3 md:space-x-0">
       <img src="/images/magnifying.png" class="h-6" />
-      <p class="text-gray-700 ml-2">Cerca</p>
-      <img src="/images/cuore.png" class="h-6 ml-5" />
-      <img src="/images/borsa.png" class="h-6 ml-5" />
-      <img src="/images/menu.png" class="h-6 ml-5" />
+      <p class="text-neutral-800 ml-2">Cerca</p>
+      <img src="/images/heart.png" class="h-6 ml-5" />
+      <img src="/images/shop.png" class="h-6 ml-5" />
+      <img src="/images/account.png" class="h-6 ml-5" />
     </div>
 
     
-    <ul class="flex justify-between items-center p-4 md:space-x-8 md:flex-row md:mt-0 md:border-0 md:bg-white ">
+    <ul class="flex justify-between items-center p-4 md:space-x-8 md:flex-row md:mt-0 md:border-0 md:bg-white text-neutral-800">
       <li>
-        <a href="/home" class="py-2 px-3 md:p-0 font-bold"><%= uomo %></a>
+        <a href="/home" class="py-2 px-3 md:p-0 font-bold"><%= products %></a>
       </li>
       <li>
-        <a href="/home" class="py-2 px-3 md:p-0 font-bold"><%= donna %></a>
+        <a href="/home" class="py-2 px-3 md:p-0 font-bold"><%= design %></a>
       </li>
       <li>
-        <a href="/home" class="py-2 px-3 md:p-0 font-bold"><%= bambini %></a>
+        <a href="/home" class="py-2 px-3 md:p-0 font-bold"><%= art %></a>
       </li>
       <li>
-        <a href="/home" class="py-2 px-3 md:p-0 font-bold"><%= sport %></a>
+        <a href="/home" class="py-2 px-3 md:p-0 font-bold"><%= estimate %></a>
       </li>
       <li>
-        <a href="/home" class="py-2 px-3 md:p-0 font-bold"><%= heritage %></a>
-      </li>
-      <li>
-        <a href="/home" class="py-2 px-3 md:p-0 font-bold"><%= culture %></a>
+        <a href="/home" class="py-2 px-3 md:p-0 font-bold"><%= our_works %></a>
       </li>
       <li>
         <a href="/home" class="py-2 px-3 md:p-0 font-bold text-red-700"><%= sales %></a>
