--- a/app/views/components/provaesperta/_gallery.html.erb
+++ b/app/views/components/provaesperta/_gallery.html.erb
@@ -28,5 +28,7 @@
         <a href="/home" class="w-full text-white font-bold bg-neutral-800 rounded-3xl py-2 px-8 text-2xl">
           <%= gallery_button %>
         </a>
-      </div>
+    </div>
 </div>
+
+<div class="border border-neutral-300 mt-5"></div>
