--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -55,81 +55,22 @@
     clients_link3: "Architettura moderna e soluzioni creative: Punto Zero Architettura trasforma ogni spazio in un'opera unica.",
 }%>
 
+
 <%= render partial: 'components/provaesperta/footer', locals: { 
     titolo_newsletter: 'Iscriviti alla newsletter',
-    sconto_acquisto: 'Ricevi il 15% di sconto sul primo acquisto',
+    sconto_acquisto: 'Usa il codice sconto "APERTURA" per il tuo primo acquisto',
     social1: '/images/instagram.png',
-    social2: '/images/youtube.png',
-    social3: '/images/linkedin.png',
-    social4: '/images/strava.png',
+    social2: '/images/facebook.png',
+    social3: '/images/x.png',
     titoloFooter1: 'Assistenza',
     titoloFooter2: 'Informazioni su',
     titoloFooter3: 'World',
     titoloFooter4: 'Shortcuts',
-    stelleRecensioni: '4.7/5',
-    recensioni: 'Valutazione media Feedaty su 14551 recensioni',
-    pagamento1: '/images/visa.png',
-    pagamento2: '/images/mastercard.png',
-    pagamento3: '/images/maestro.png',
-    pagamento4: '/images/americanexpress.png',
-    pagamento5: '/images/discover.png',
-    pagamento6: '/images/dinersclub.png',
-    pagamento7: '/images/googlepay.png',
-    pagamento8: '/images/paypal.png',
-    copyright: 'Copyright 2021-2024 Diadora S.p.A. All rights reserved.',
+    stelleRecensioni: '4.6/5',
+    recensioni: 'Valutazione media Trustpilot su 413 recensioni',
+    copyright: 'Copyright 2021-2024 PZA S.p.A. All rights reserved.',
     footer1: 'Privacy',
     footer2: 'Cookie',
     footer3: 'Termini e condizioni',
     footer4: 'Sitemap',
-
-
-assistenza_links: 
-[
-  "Dashboard assistenza", 
-  "Contattaci", 
-  "Il tuo account", 
-  "Traccia il tuo ordine", 
-  "Spedizioni e Consegne", 
-  "Resi e Rimborsi", 
-  "Pagamenti e Sicurezza", 
-  "Registrazione e Ordini", 
-  "Sicurezza prodotto", 
-  "Avvisi e richiami prodotto",
-],
-
-informazioni_links: 
-[
-    "Guida alle taglie",
-    "Lavora con noi",
-    "Area Download",
-    "Corporate B2B",
-    "Store Locator",
-    "Dichiarazioni di conformità e Note Informative",
-    "Bilanci di Sostenibilità - Archivio",
-],
-
-world_links: 
-[
-    "Diadora World",
-    "Sostenibilità",
-    "Tecnologie",
-    "Running Shoe Finder",
-    "Atleti ed Atlete",
-    "Sneaker Agenda",
-],
-
-shortcuts_links:
-[
-    "Run Valley",
-    "Il condominio dello sport",
-    "Abbigliamento Termico",
-    "Scarpe Made in Italy",
-    "Scarpe Trail Running",
-    "Scarpe Bianche",
-    "Scarpe Nere",
-    "Equipe",
-    "B.560",
-    "Mercury",
-    "Mythos Propulsion 280",
-],
  } %>
