--- a/app/views/components/provaesperta/_footer.html.erb
+++ b/app/views/components/provaesperta/_footer.html.erb
@@ -1,3 +1,5 @@
+<div class="border border-neutral-300 mt-5"></div>
+
 <div class="flex flex-col mt-10">
     <div class="flex flex-col md:flex-row justify-center md:gap-20 gap-10 items-center md:items-start">
         <div class="flex flex-col space-y-3 w-full md:w-auto items-center md:items-start">
@@ -6,50 +8,13 @@
             <div class="flex flex-row border border-zinc-300 p-1 rounded-full pl-2 md:pl-5 w-full max-w-xs md:max-w-full">
                 <input type="text" placeholder="Inserisci il tuo indirizzo e-mail" class="w-full md:w-96 outline-none bg-transparent">
                 <div class="bg-neutral-800 p-2 rounded-full ml-2">
-                    <img src="/images/arrow.png" class="size-6">
+                    <img src="/images/whitearrow.png" class="size-6">
                 </div>
             </div>
             <div class="flex flex-row gap-7 size-5 mt-5 justify-center md:justify-start">
                 <img src="<%= social1 %>"/>
                 <img src="<%= social2 %>"/>
                 <img src="<%= social3 %>"/>
-                <img src="<%= social4 %>"/>
-            </div>
-        </div>
-
-        <div class="w-full md:w-auto flex flex-col items-center md:items-start">
-            <h1 class="text-lg font-bold"><%= titoloFooter1 %></h1>
-            <div class="space-y-1 mt-3">
-                <% assistenza_links.each do |link| %>
-                    <p><%= link %></p>
-                <% end %>
-            </div>
-        </div>
-
-        <div class="w-full md:w-auto flex flex-col items-center md:items-start">
-            <h1 class="text-lg font-bold text-center md:text-left"><%= titoloFooter2 %></h1>
-            <div class="space-y-1 mt-3 "> <!-- text-nowrap RIMOSSO -->
-                <% informazioni_links.each do |link| %>
-                    <p class="w-full text-left"><%= link %></p>
-                <% end %>     
-            </div>
-        </div>
-
-        <div class="w-full md:w-auto flex flex-col items-center md:items-start">
-            <h1 class="text-lg font-bold"><%= titoloFooter3 %></h1>
-            <div class="space-y-1 mt-3 text-nowrap">
-                <% world_links.each do |link| %>
-                    <p><%= link %></p>
-                <% end %>   
-            </div>
-        </div>
-
-        <div class="w-full md:w-auto flex flex-col items-center md:items-start">
-            <h1 class="text-lg font-bold"><%= titoloFooter4 %></h1>
-            <div class="space-y-1 mt-3 text-nowrap">
-                <% shortcuts_links.each do |link| %>
-                    <p><%= link %></p>
-                <% end %>  
             </div>
         </div>
     </div>
@@ -58,11 +23,13 @@
     <!-- 4.5 star rating SVG -->
     <div class="flex flex-col md:flex-row items-center py-5 px-2 md:px-5 justify-between gap-5">
         <div class="flex flex-row items-center flex-wrap justify-center md:justify-start">
+        <!-- Funzione Timez -->
             <% 4.times do %>
                 <svg class="w-5 h-5 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
                     <polygon points="10,1 12.59,7.36 19.51,7.36 13.97,11.63 16.56,17.99 10,13.72 3.44,17.99 6.03,11.63 0.49,7.36 7.41,7.36"/>
                 </svg>
             <% end %>
+        <!-- Fine funzione Times -->
             <svg class="w-5 h-5 text-yellow-400" viewBox="0 0 20 20">
                 <defs>
                     <linearGradient id="half">
@@ -78,16 +45,6 @@
             <div class="text-md text-neutral-700 ml-3">
                 <p><%= recensioni %></p>
             </div>
-        </div>
-        <div class="flex flex-wrap items-end justify-center md:justify-end mt-4 md:mt-0">
-            <img src="<%= pagamento1 %>" class="w-10 h-10 ml-2"/>
-            <img src="<%= pagamento2 %>" class="w-10 h-10 ml-2"/>
-            <img src="<%= pagamento3 %>" class="w-10 h-10 ml-2"/>
-            <img src="<%= pagamento4 %>" class="w-10 h-10 ml-2"/>
-            <img src="<%= pagamento5 %>" class="w-10 h-10 ml-2"/>
-            <img src="<%= pagamento6 %>" class="w-10 h-10 ml-2"/>
-            <img src="<%= pagamento7 %>" class="w-10 h-10 ml-2"/>
-            <img src="<%= pagamento8 %>" class="w-10 h-10 ml-2"/>
         </div>
     </div>
     <div class="flex flex-col md:flex-row items-center gap-3 md:gap-5 w-full h-auto">
