--- a/app/views/gallery/index.html.erb
+++ b/app/views/gallery/index.html.erb
@@ -1,5 +1,6 @@
 <%= render partial: 'components/provaesperta/gallerynavbar', locals: {
     codice: "SCONTI DI APERTURA",
     title_gallery: "Galleria dei nostri progetti",
-    gallery_title1: "Geometrie di Vetro — Visione d’Avanguardia"
+    gallery_title1: "Geometrie di Vetro — Visione d’Avanguardia",
+    viewfullgallery: "Visualizza la galleria completa"
 }%>
