--- a/app/views/components/provaesperta/_navbar.html.erb
+++ b/app/views/components/provaesperta/_navbar.html.erb
@@ -21,21 +21,20 @@
         <a href="/home" class="py-2 px-3 md:p-0 font-bold"><%= products %></a>
       </li>
       <li>
-        <a href="/home" class="py-2 px-3 md:p-0 font-bold"><%= design %></a>
+        <a href="#" class="py-2 px-3 md:p-0 font-bold"><%= design %></a>
       </li>
       <li>
-        <a href="/home" class="py-2 px-3 md:p-0 font-bold"><%= art %></a>
+        <a href="#" class="py-2 px-3 md:p-0 font-bold"><%= art %></a>
       </li>
       <li>
-        <a href="/home" class="py-2 px-3 md:p-0 font-bold"><%= estimate %></a>
+        <a href="#" class="py-2 px-3 md:p-0 font-bold"><%= estimate %></a>
       </li>
       <li>
-        <a href="/home" class="py-2 px-3 md:p-0 font-bold"><%= our_works %></a>
+        <a href="/gallery" class="py-2 px-3 md:p-0 font-bold"><%= our_works %></a>
       </li>
       <li>
-        <a href="/home" class="py-2 px-3 md:p-0 font-bold text-red-700"><%= sales %></a>
+        <a href="#" class="py-2 px-3 md:p-0 font-bold text-red-700"><%= sales %></a>
       </li>
     </ul>
   </div>
 </nav>
-
