--- a/app/views/components/provaesperta/_description.html.erb
+++ b/app/views/components/provaesperta/_description.html.erb
@@ -1,21 +1,21 @@
-<div class="border border-neutral-300 "></div>
+<div class="border border-neutral-300"></div>
 
 <div class="bg-neutral-102 w-full">
-    <div class="flex items-center justify-between max-w-4xl mx-auto p-6">
-        <div class="w-1/2">
-            <h1 class="text-4xl font-bold text-neutral-800">
-                <%= welcome %> 
-            </h1>
-            <p class="mt-4 text-neutral-600">
-                <%= description %>
-            </p>
-            <button class="mt-6 px-6 py-2 bg-neutral-800 text-white rounded-md hover:bg-neutral-900">
-                <%= button_description %>
-            </button>
-        </div>
-
-        <div class="w-2/5">
-            <img src="/images/BigLogo.jpg" alt="Immagine Logo" class="rounded-lg shadow-lg ">
-        </div>
+  <div class="flex flex-col md:flex-row items-center justify-between max-w-4xl mx-auto p-4 md:p-6 gap-8">
+    <div class="w-full md:w-1/2">
+      <h1 class="text-2xl md:text-4xl font-bold text-neutral-800">
+        <%= welcome %> 
+      </h1>
+      <p class="mt-4 text-neutral-600 text-base md:text-lg">
+        <%= description %>
+      </p>
+      <button class="mt-6 px-6 py-2 bg-neutral-800 text-white rounded-md hover:bg-neutral-900 w-full md:w-auto">
+        <%= button_description %>
+      </button>
     </div>
+
+    <div class="w-full md:w-2/5 mt-8 md:mt-0 flex justify-center">
+      <img src="/images/BigLogo.jpg" alt="Immagine Logo" class="rounded-lg shadow-lg w-40 md:w-full max-w-xs md:max-w-full" />
+    </div>
+  </div>
 </div>
