--- a/app/views/components/provaesperta/_gallery.html.erb
+++ b/app/views/components/provaesperta/_gallery.html.erb
@@ -25,7 +25,7 @@
 
 <div class="flex items-center justify-center p-4">
     <div class="">
-        <a href="/home" class="w-full text-white font-bold bg-neutral-800 rounded-3xl py-2 px-8 text-2xl">
+        <a href="/gallery" class="w-full text-white font-bold bg-neutral-800 rounded-3xl py-2 px-8 text-2xl">
           <%= gallery_button %>
         </a>
     </div>
