--- a/app/views/components/provaesperta/_gallerynavbar.html.erb
+++ b/app/views/components/provaesperta/_gallerynavbar.html.erb
@@ -1,54 +1,42 @@
-<div class="border border-black bg-neutral-800 text-white font-bold flex justify-between items-center">
-  <span class="underline font-bold"><</span>
-  <h1 class="underline"><%= codice %></h1>
-  <span class="underline font-bold">></span>
+<div class="border border-black bg-neutral-800 text-white font-bold flex justify-between items-center px-2 py-2 md:px-6">
+  <span class="underline font-bold text-lg md:text-2xl"><</span>
+  <h1 class="underline text-base md:text-xl"><%= codice %></h1>
+  <span class="underline font-bold text-lg md:text-2xl">></span>
 </div>
 
-<div class="flex p-10 justify-center">
-  <img src="/images/BigLogo.jpg" class="w-52 rounded-xl" alt="Logo" />
-</div>
+<nav class="bg-white border-gray-200">
+  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-2">
+    <img src="<%= logo %>" class="h-8 rounded-xl" />
+    <div class="flex items-center space-x-2 md:space-x-3 md:order-2">
+      <img src="/images/magnifying.png" class="h-6" />
+      <p class="text-neutral-800 ml-1 md:ml-2 text-sm md:text-base">Cerca</p>
+      <img src="/images/heart.png" class="h-6 ml-3 md:ml-5" />
+      <img src="/images/shop.png" class="h-6 ml-3 md:ml-5" />
+      <img src="/images/account.png" class="h-6 ml-3 md:ml-5" />
+    </div>
 
-<div class="flex flex-col items-center justify-center">
-  <h2 class="text-2xl font-bold mb-7"><%= title_gallery %></h2>
-  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 w-4/5">
-    <div class="bg-gray-200 p-4 rounded-lg h-96">
-      <img src="/images/galleryshow1.jpg" alt="Geometrie di Vetro — Visione d&rsquo;Avanguardia" class="w-full h-52 object-cover rounded-lg mb-2">
-      <p class="text-center"><%= gallery_title1 %></p>
-      <div class="flex items-center justify-center">
-          <button class="mt-6 px-6 py-2 bg-neutral-800 text-white font-bold rounded-xl hover:bg-blue-700 transition duration-300"><%= viewfullgallery %></button>
-      </div>
-    </div>
-    <div class="bg-gray-200 p-4 rounded-lg h-96">
-      <img src="/images/galleryshow2.jpg" alt="Gallery" class="w-full h-52 object-cover rounded-lg mb-2">
-      <p class="text-center">Progetto 2</p>
-      <div class="flex items-center justify-center">
-          <button class="mt-6 px-6 py-2 bg-neutral-800 text-white font-bold rounded-xl hover:bg-blue-700 transition duration-300"><%= viewfullgallery %></button>
-      </div>
-    </div>
-    <div class="bg-gray-200 p-4 rounded-lg h-96">
-      <img src="/images/galleryX.jpg" alt="Gallery" class="w-full h-52 object-cover rounded-lg mb-2">
-      <p class="text-center">Progetto 3</p>
-    </div>
-    <div class="bg-gray-200 p-4 rounded-lg h-96">
-      <img src="/images/galleryX.jpg" alt="Gallery" class="w-full h-52 object-cover rounded-lg mb-2">
-      <p class="text-center">Progetto 4</p>
-    </div>
-    <div class="bg-gray-200 p-4 rounded-lg h-96">
-      <img src="/images/galleryX.jpg" alt="Gallery" class="w-full h-52 object-cover rounded-lg mb-2">
-      <p class="text-center">Progetto 5</p>
-    </div>
-    <div class="bg-gray-200 p-4 rounded-lg h-96">
-      <img src="/images/galleryX.jpg" alt="Gallery" class="w-full h-52 object-cover rounded-lg mb-2">
-      <p class="text-center">Progetto 5</p>
-    </div>
-    <div class="bg-gray-200 p-4 rounded-lg h-96">
-      <img src="/images/galleryX.jpg" alt="Gallery" class="w-full h-52 object-cover rounded-lg mb-2">
-      <p class="text-center">Progetto 5</p>
-    </div>
-    <div class="bg-gray-200 p-4 rounded-lg h-96">
-      <img src="/images/galleryX.jpg" alt="Gallery" class="w-full h-52 object-cover rounded-lg mb-2">
-      <p class="text-center">Progetto 5</p>
-    </div>
+    <ul class="flex flex-col md:flex-row justify-between items-center p-2 md:p-4 md:space-x-8 md:mt-0 md:border-0 md:bg-white text-neutral-800 w-full md:w-auto">
+      <li>
+        <a href="/home" class="py-2 px-3 md:p-0 font-bold block text-center"><%= gallery_home %></a>
+      </li>
+      <li>
+        <a href="#" class="py-2 px-3 md:p-0 font-bold block text-center"><%= gallery_prodotti %></a>
+      </li>
+      <li>
+        <a href="#" class="py-2 px-3 md:p-0 font-bold block text-center"><%= gallery_arts %></a>
+      </li>
+      <li>
+        <a href="#" class="py-2 px-3 md:p-0 font-bold block text-center"><%= gallery_estimate %></a>
+      </li>
+      <li>
+        <a href="#" class="py-2 px-3 md:p-0 font-bold text-red-700 block text-center"><%= gallery_sales %></a>
+      </li>
+    </ul>
   </div>
-  <button class="mt-6 px-6 py-2 bg-blue-600 text-white font-bold rounded hover:bg-blue-700 transition duration-300">Visualizza la galleria completa</button>
+</nav>
+
+<div class="border border-neutral-300 mt-5"></div>
+
+<div class="flex p-4 md:p-10 justify-center">
+  <img src="<%= big_logo %>" class="w-32 md:w-52 rounded-xl" alt="Logo" />
 </div>
