--- a/app/views/components/provaesperta/_navbar.html.erb
+++ b/app/views/components/provaesperta/_navbar.html.erb
@@ -1,40 +1,42 @@
-<div class="border border-black bg-neutral-800 text-white font-bold flex justify-between items-center">
-  <span class="underline font-bold"><</span>
-  <h1 class="underline"><%= codice %></h1>
-  <span class="underline font-bold">></span>
+<div class="border border-black bg-neutral-800 text-white font-bold flex justify-between items-center px-2 py-2 md:px-6">
+  <span class="underline font-bold text-lg md:text-2xl"><</span>
+  <h1 class="underline text-base md:text-xl"><%= codice %></h1>
+  <span class="underline font-bold text-lg md:text-2xl">></span>
 </div>
 
 <nav class="bg-white border-gray-200">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-2">
     <img src="/images/logo.png" class="h-8 rounded-xl" />
-    <div class="flex items-center md:order-2 space-x-3 md:space-x-0">
+    <div class="flex items-center space-x-2 md:space-x-3 md:order-2">
       <img src="/images/magnifying.png" class="h-6" />
-      <p class="text-neutral-800 ml-2">Cerca</p>
-      <img src="/images/heart.png" class="h-6 ml-5" />
-      <img src="/images/shop.png" class="h-6 ml-5" />
-      <img src="/images/account.png" class="h-6 ml-5" />
+      <p class="text-neutral-800 ml-1 md:ml-2 text-sm md:text-base">Cerca</p>
+      <img src="/images/heart.png" class="h-6 ml-3 md:ml-5" />
+      <img src="/images/shop.png" class="h-6 ml-3 md:ml-5" />
+      <img src="/images/account.png" class="h-6 ml-3 md:ml-5" />
     </div>
 
-    
-    <ul class="flex justify-between items-center p-4 md:space-x-8 md:flex-row md:mt-0 md:border-0 md:bg-white text-neutral-800">
+    <ul class="flex flex-col md:flex-row justify-between items-center p-2 md:p-4 md:space-x-8 md:mt-0 md:border-0 md:bg-white text-neutral-800 w-full md:w-auto">
       <li>
-        <a href="/home" class="py-2 px-3 md:p-0 font-bold"><%= products %></a>
+        <a href="/home" class="py-2 px-3 md:p-0 font-bold block text-center"><%= products %></a>
       </li>
       <li>
-        <a href="#" class="py-2 px-3 md:p-0 font-bold"><%= design %></a>
+        <a href="#" class="py-2 px-3 md:p-0 font-bold block text-center"><%= design %></a>
       </li>
       <li>
-        <a href="#" class="py-2 px-3 md:p-0 font-bold"><%= art %></a>
+        <a href="#" class="py-2 px-3 md:p-0 font-bold block text-center"><%= art %></a>
       </li>
       <li>
-        <a href="#" class="py-2 px-3 md:p-0 font-bold"><%= estimate %></a>
+        <a href="#" class="py-2 px-3 md:p-0 font-bold block text-center"><%= estimate %></a>
       </li>
       <li>
-        <a href="/gallery" class="py-2 px-3 md:p-0 font-bold"><%= our_works %></a>
+      <li>
+        <a href="/gallery" class="py-2 px-3 md:p-0 font-bold block text-center"><%= our_works %></a>
       </li>
       <li>
-        <a href="#" class="py-2 px-3 md:p-0 font-bold text-red-700"><%= sales %></a>
+        <a href="#" class="py-2 px-3 md:p-0 font-bold text-red-700 block text-center"><%= sales %></a>
       </li>
     </ul>
   </div>
 </nav>
+
+<div class="border border-neutral-300 mt-5"></div>
