--- a/app/views/components/provaesperta/_gallery.html.erb
+++ b/app/views/components/provaesperta/_gallery.html.erb
@@ -24,11 +24,12 @@
 </div>
 
 <div class="flex items-center justify-center p-4">
-    <div class="">
-        <a href="/gallery" class="w-full text-white font-bold bg-neutral-800 rounded-3xl py-2 px-8 text-2xl">
-          <%= gallery_button %>
-        </a>
-    </div>
+  <div class="w-full max-w-xs sm:max-w-sm md:max-w-md">
+    <a href="/gallery"
+      class="block w-full text-white font-bold bg-neutral-800 rounded-3xl py-2 px-4 sm:px-8 text-lg sm:text-xl md:text-2xl text-center hover:bg-neutral-900 transition">
+      <%= gallery_button %>
+    </a>
+  </div>
 </div>
 
 <div class="border border-neutral-300 mt-5"></div>
